# paper-tracker

./: .env.example  CHANGELOG.md  README.en.md  README.md  index.html  pyproject.toml
.github/workflows/: daily-papers.yml
archive/: search_20260626_201528.html  search_20260701_211225.html  search_20260702_081912.html
assets/: interactive.js  style.css
config/: biology.yml  example.yml
config/test/: pubmed_source.yml
database/: papers.db
docs/en/: source_pubmed_api_query.md
docs/zh/: guide_configuration.md  source_openalex_api_query.md  source_pubmed_api_query.md
src/PaperTracker/config/: defaults.yml  search.py
src/PaperTracker/llm/: client.py  service.py
src/PaperTracker/renderers/: html.py  mapper.py  markdown.py  view_models.py
src/PaperTracker/services/: search.py
src/PaperTracker/sources/: registry.py
src/PaperTracker/sources/openalex/: client.py  fetch.py  parser.py
src/PaperTracker/sources/pubmed/: client.py  fetch.py  parser.py  query.py  source.py
test/: test_config_layering.py
